test/expected/explain_lc.out
explain long char x
        ^
9: error: "long char" is illegal for built-in type
